# BitBully

./: .gitignore  .gitmodules  .pre-commit-config.yaml  404.html  4inarow.h  Agent4InARow.cpp  Agent4InARow.h  BitBully.cpp  BitBully.h  BitBully_8cpp_source.html  BitBully_8h_source.html  Board.cpp  Board.h  BoardCheckWins.cpp  Board_8cpp_source.html  Board_8h_source.html  CHANGELOG.md  CMakeLists.txt  Doxyfile  MANIFEST.in  MoveList_8cpp_source.html  MoveList_8h_source.html  MoveSorter_8hpp_source.html  OpeningBook_8cpp_source.html  OpeningBook_8h_source.html  OpeningBook_8hpp_source.html  Position_8hpp_source.html  README.md  Readme.md  Solver_8cpp_source.html  Solver_8hpp_source.html  TranspositionTable.cpp  TranspositionTable.h  TranspositionTable_8cpp_source.html  TranspositionTable_8h_source.html  TranspositionTable_8hpp_source.html  Unit1.cpp  ____init_____8py_source.html  annotated.html  annotated_dup.js  (+99 more)
.github/workflows/: cmake-multi-platform.yml  cmake-multi-platform.yml.bkp  doxygen.yml  wheels.yml
bitbully/: index.html
bitbully_core/: index.html
board/: index.html
cpp/html/: annotated.html  annotated_dup.js  classes.html  dir_00d9aa640f3db51478c60a2548a5a692.html  dir_00d9aa640f3db51478c60a2548a5a692.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_848caa8f67147463cdd5a8fe477c468f.html  dir_848caa8f67147463cdd5a8fe477c468f.js  dir_9104d72bed8434ec2cfb86b9210bb1bb.html  dir_9104d72bed8434ec2cfb86b9210bb1bb.js  dir_9104d72bed8434ec2cfb86b9210bb1bb_dep.md5  doxygen_crawl.html  files.html  files_dup.js  functions.html  functions_func.html  graph_legend.html  hierarchy.html  hierarchy.js  index.html  inherit_graph_0.map  inherit_graph_0.md5  inherit_graph_1.map  inherit_graph_1.md5  inherit_graph_11.map  inherit_graph_12.map  inherit_graph_13.md5  inherit_graph_14.map  inherit_graph_14.md5  inherit_graph_16.map  inherit_graph_16.md5  inherit_graph_2.map  inherit_graph_2.md5  inherit_graph_3.md5  inherit_graph_4.map  inherit_graph_5.map  inherit_graph_5.md5  inherit_graph_6.map  inherit_graph_6.md5  (+13 more)
cpp/html/d0/d30/: gui__c4_8py_source.html
cpp/html/d0/d3b/: classbitbully_1_1agent__interface_1_1Connect4Agent.html  classbitbully_1_1agent__interface_1_1Connect4Agent.js
cpp/html/d0/d54/: MoveSorter_8hpp_source.html
cpp/html/d1/d19/: Solver_8hpp_source.html
cpp/html/d1/d9d/: classBitBully_1_1Board.html  classBitBully_1_1Board.js
cpp/html/d1/daa/: classbitbully_1_1board_1_1Board-members.html
cpp/html/d1/dd5/: classBitBully_1_1TranspositionTable-members.html
cpp/html/d1/dfa/: classGameSolver_1_1Connect4_1_1MoveSorter.html  classGameSolver_1_1Connect4_1_1MoveSorter.js
cpp/html/d2/d0a/: namespacebitbully_1_1agent__interface.html  namespacebitbully_1_1agent__interface.js
cpp/html/d2/d52/: classGameSolver_1_1Connect4_1_1TranspositionTable.html  classGameSolver_1_1Connect4_1_1TranspositionTable.js
cpp/html/d2/d9b/: OpeningBook_8cpp_source.html
cpp/html/d2/d9f/: classBitBully_1_1OpeningBook.html
cpp/html/d2/dc5/: structBitBully_1_1Board_1_1RawState-members.html
cpp/html/d2/deb/: classbitbully_1_1solver_1_1BitBully-members.html
cpp/html/d3/d3d/: MoveList_8h_source.html
cpp/html/d3/d54/: classGameSolver_1_1Connect4_1_1TranspositionTable__coll__graph.md5
cpp/html/d3/d5c/: BitBully_8h_source.html
cpp/html/d3/d78/: classGameSolver_1_1Connect4_1_1OpeningBook.html  classGameSolver_1_1Connect4_1_1OpeningBook.js
cpp/html/d3/d9a/: ____init_____8py_source.html
cpp/html/d3/dcd/: classGameSolver_1_1Connect4_1_1Solver.html
cpp/html/d3/df2/: namespacebitbully_1_1main.html
cpp/html/d4/d01/: Solver_8cpp_source.html
cpp/html/d4/d55/: namespacebitbully_1_1solver.html  namespacebitbully_1_1solver.js
cpp/html/d4/d9b/: classGameSolver_1_1Connect4_1_1Position.html  classGameSolver_1_1Connect4_1_1Position.js
cpp/html/d4/da2/: classbitbully_1_1bitbully_1_1BitBully.html  classbitbully_1_1bitbully_1_1BitBully.js
cpp/html/d4/dde/: namespacebitbully.html  namespacebitbully.js
cpp/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  all_8.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_9.js  functions_0.js  functions_1.js  functions_10.js  functions_11.js  functions_12.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  (+11 more)
cpp/latex/: annotated.tex  dir_9104d72bed8434ec2cfb86b9210bb1bb.tex  files.tex  hierarchy.tex  namespaces.tex  refman.tex
develop/: index.html
doc/: develop.md
docs/: bitbully.md  bitbully_core.md  board.md  develop.md  getting_started.md  gui_c4.md  index.md  interface.md  python.md
getting_started/: index.html
google_tests/: 4inarow.cpp  4inarow.h  BitBullyTest.cpp  BoardTest.cpp  CMakeLists.txt  VerificationTest.cpp
gtests/: BitBullyTest.cpp  BoardTest.cpp  CMakeLists.txt  OpeningBookTests.cpp  VerificationTest.cpp
gui_c4/: index.html
interface/: index.html
notebooks/: c4_analyze_runtimes.ipynb  gameWidget.ipynb  game_widget.ipynb  getting_started.ipynb  readBooks.ipynb
python/: index.html
scripts/: update_version.sh
search/: all_2.js  all_4.js  all_6.js  all_7.js  all_8.js  all_a.js  all_b.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_5.js  classes_6.js  classes_7.js  functions_0.js  functions_2.js  functions_3.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  search_index.json  searchdata.js
solver/: index.html
src/: BitBully.h  Board.cpp  Board.h  OpeningBook.h  bitbully_core.cpp  example.cpp  main.cpp  version.h  version.h.bak
src/bitbully/: __init__.py  bitbully.py  bitbully_core.pyi  board.py  gui_c4.py  solver.py
tests/: Untitled-1.ipynb  test_board_basic.py  test_board_core_basic.py  test_imports.py  test_opening_book.py  test_opening_book_core.py  test_solver_basic.py  test_solver_core_basic.py
user_guide/: index.html
(+114 files in other folders)
