# https://packaging.python.org/en/latest/tutorials/packaging-projects/#creating-pyproject-toml
[project]
name = "bitbully"
version = "0.0.13"
description = "A fast Connect-4 Solver for Python & C++"
authors = [
    { name = "Markus Thill" }
]
maintainers = [
    { name = "Markus Thill" }
]
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
keywords = ["connect-4", "solver", "perfect-playing", "opening book", "tree-search"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = []  # Add Python dependencies required for your project

[project.urls]
Homepage = "https://github.com/MarkusThill/BitBully"
Issues = "https://github.com/MarkusThill/BitBully/issues"

[project.optional-dependencies]
# Specify optional dependency groups
dev = [
    "commitizen", # Required for versioning
    "pre-commit", # For managing Git hooks (optional)
    "build",
    "twine",
    "readme_renderer[md]",
    "keyrings.alt",
    "pre-commit"
]

ci = [
    "pytest", # For testing
    "ruff", # For linting
]

[build-system]
requires = ["build", "setuptools>=42", "wheel", "cibuildwheel", "cmake>=3.15", "scikit-build", "pybind11"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true  # Include additional non-Python files (e.g., libraries)

# [tool.setuptools.package-data]
# bitbully = [
#    "*.so",
#    "*.dll"
#    "libs/windows/*.dll",
#    "libs/macos/*.dylib",
#]

# https://cibuildwheel.pypa.io/en/stable/options/#build-skip
[tool.cibuildwheel]
build = "cp310-* cp311-* cp312-* cp313-*"  # Only build for Python 3.10 and 3.11 (currently)
skip = "pp* *win32*"         # Skip PyPy builds

[tool.setuptools.packages.find]
where = ["src"]  # list of folders that contain the packages (["."] by default)
include = ["bitbully*"]  # package names should match these glob patterns (["*"] by default)
exclude = ["bitbully.tests*"]  # exclude packages matching these glob patterns (empty by default)
namespaces = false  # to disable scanning PEP 420 namespaces (true by default)

[tool.commitizen]
name = "cz_conventional_commits"
version_scheme = "semver"
version = "0.0.13" # Current version managed by Commitizen
version_files = ["pyproject.toml", "version.h", "version.txt", "src/bitbully/__init__.py", "setup.py"] # if cz can directly bump it
pre_bump_hooks = "./scripts/update_version.sh"
tag_format = "v$version"  # Tag format (e.g., v1.0.0)
changelog_file = "CHANGELOG.md"  # File to store changelog (if needed)
update_changelog_on_bump = true
